--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/lodash-es": "^4.17.12",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.39",
+		"prisma": "^5.17.0",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.6",
@@ -29,8 +30,13 @@
 	"type": "module",
 	"dependencies": {
 		"@fingerprintjs/fingerprintjs": "^4.4.3",
+		"@prisma/client": "^5.17.0",
 		"@thumbmarkjs/thumbmarkjs": "^0.14.8",
+		"acebase": "^1.29.5",
+		"acebase-client": "^1.21.1",
+		"acebase-server": "^1.18.2",
 		"lodash-es": "^4.17.21",
+		"lucide-svelte": "^0.414.0",
 		"pocketbase": "^0.21.3"
 	}
 }
