--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"acebase-server": "^1.18.2",
 		"lodash-es": "^4.17.21",
 		"lucide-svelte": "^0.414.0",
-		"pocketbase": "^0.21.3"
+		"pocketbase": "^0.21.3",
+		"slugify": "^1.6.6"
 	}
 }
