--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
 	"type": "module",
 	"dependencies": {
 		"@fingerprintjs/fingerprintjs": "^4.4.3",
+		"@paralleldrive/cuid2": "^2.2.2",
 		"@prisma/client": "^5.17.0",
 		"@thumbmarkjs/thumbmarkjs": "^0.14.8",
 		"acebase": "^1.29.5",
 		"acebase-client": "^1.21.1",
 		"acebase-server": "^1.18.2",
+		"elevenlabs": "^0.11.0",
 		"lodash-es": "^4.17.21",
 		"lucide-svelte": "^0.414.0",
 		"pocketbase": "^0.21.3",
