--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
 		"@types/lodash": "^4.17.7",
 		"@types/lodash-es": "^4.17.12",
 		"@types/markdown-it": "^14.1.2",
+		"@types/node-steam-openid": "^1.0.3",
 		"@types/passport": "^1.0.16",
 		"@types/passport-steam": "^1.0.5",
 		"@types/prismjs": "^1.26.4",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.39",
 		"prisma": "^5.17.0",
-		"prisma-class-validator-generator": "^5.0.0",
-		"prisma-yup-generator": "^0.2.0",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.6",
@@ -47,17 +46,15 @@
 		"@prisma/client": "^5.17.0",
 		"@pyrodata/editor": "^1.0.0-beta.18",
 		"@thumbmarkjs/thumbmarkjs": "^0.14.8",
-		"class-validator": "^0.14.1",
 		"country-flag-icons": "^1.5.13",
 		"dayjs": "^1.11.12",
 		"decode-formdata": "^0.7.5",
 		"elevenlabs": "^0.11.0",
-		"file-type": "^19.3.0",
-		"filesize": "^10.1.4",
 		"highlight.js": "^11.10.0",
 		"lodash-es": "^4.17.21",
 		"lucide-svelte": "^0.414.0",
 		"markdown-it": "^14.1.0",
+		"node-steam-openid": "^1.2.3",
 		"pino": "^9.3.2",
 		"prismjs": "^1.29.0",
 		"slugify": "^1.6.6",
