--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
 		"@types/prismjs": "^1.26.5",
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.3",
-		"prisma": "^5.22.0",
-		"svelte": "5.0.0-next.246",
+		"prisma": "^6.6.0",
+		"svelte": "^5.26.2",
 		"svelte-check": "^3.8.6",
 		"tailwindcss": "^3.4.17",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
-		"vite": "^5.4.17",
+		"vite": "^5.4.18",
 		"zod-prisma-types": "^3.2.4"
 	},
 	"type": "module",
@@ -40,10 +40,10 @@
 		"@auth/core": "^0.34.2",
 		"@auth/prisma-adapter": "^2.8.0",
 		"@auth/sveltekit": "^1.8.0",
-		"@fingerprintjs/fingerprintjs": "^4.6.1",
+		"@fingerprintjs/fingerprintjs": "^4.6.2",
 		"@floating-ui/dom": "^1.6.13",
 		"@paralleldrive/cuid2": "^2.2.2",
-		"@prisma/client": "^5.22.0",
+		"@prisma/client": "^6.6.0",
 		"@pyrodata/editor": "1.0.0-beta.18",
 		"@thumbmarkjs/thumbmarkjs": "^0.14.8",
 		"brackets-json-db": "^1.0.2",
